--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="course1">
 
             <div class="img1">
-                <img src="images/service-1.svg" class="image">
+                <img src="service-1.svg" class="image">
             </div>
 
             <div class="women">
@@ -90,7 +90,7 @@
         <div class="course1">
 
             <div class="img1">
-                <img src="images/service-2.svg" class="image">
+                <img src="service-2.svg" class="image">
             </div>
 
             <div class="women">
@@ -110,7 +110,7 @@
 
         <div class="course1">
             <div class="img1">
-                <img src="images/service-3.svg" class="image">
+                <img src="service-3.svg" class="image">
             </div>
 
             <div class="women">
@@ -137,8 +137,8 @@
         <div class="about1">
 
             <div class="about-img">
-                <img src="images/about-shape-1.png" class="about-image1">
-                <img src="images/about-banner.jpg" class="about-image">
+                <img src="about-shape-1.png" class="about-image1">
+                <img src="about-banner.jpg" class="about-image">
                 <div class="about-info">
                     <a class="about-btn">Meet Instructor</a>
                 </div>
@@ -168,7 +168,7 @@
 
 
                 <div class="about-leaf">
-                    <img src="images/about-shape-2.png" class="leaf-img">
+                    <img src="about-shape-2.png" class="leaf-img">
                 </div>
             </div>
 
@@ -197,7 +197,7 @@
 
             <div class="all1">
                 <div class="all-img">
-                    <img src="images/courses-1.jpg" class="all-img1">
+                    <img src="courses-1.jpg" class="all-img1">
                 </div>
 
                 <div class="num">
@@ -224,7 +224,7 @@
             <div class="all2">
 
                 <div class="all-img">
-                    <img src="images/courses-2.jpg" class="all-img1">
+                    <img src="courses-2.jpg" class="all-img1">
                 </div>
 
                 <div class="num">
@@ -250,7 +250,7 @@
             <div class="all3">
 
                 <div class="all-img">
-                    <img src="images/courses-3.jpg" class="all-img1">
+                    <img src="courses-3.jpg" class="all-img1">
                 </div>
 
                 <div class="num">
@@ -273,7 +273,7 @@
 
             <div class="all1">
                 <div class="all-img">
-                    <img src="images/courses-4.jpg" class="all-img1">
+                    <img src="courses-4.jpg" class="all-img1">
                 </div>
 
                 <div class="num">
@@ -300,7 +300,7 @@
             <div class="all2">
 
                 <div class="all-img">
-                    <img src="images/courses-5.jpg" class="all-img1">
+                    <img src="courses-5.jpg" class="all-img1">
                 </div>
 
                 <div class="num">
@@ -326,7 +326,7 @@
             <div class="all3">
 
                 <div class="all-img">
-                    <img src="images/courses-6.jpg" class="all-img1">
+                    <img src="courses-6.jpg" class="all-img1">
                 </div>
 
                 <div class="num">
@@ -485,13 +485,13 @@
                     <div class="mobile1">Download our mobile app</div>
                     <div class="mobile1">and start coaching anytime</div>
                     <div class="ground1">
-                        <img src="images/play-store.jpg" alt="" class="ground1-img">
-                        <img src="images/app-store.jpg" alt="" class="ground2-img">
+                        <img src="play-store.jpg" alt="" class="ground1-img">
+                        <img src="app-store.jpg" alt="" class="ground2-img">
                     </div>
 
                     <div class="leafs">
-                        <img src="images/app-shape-1.png" alt="" class="leaf1-img">
-                        <img src="images/app-shape-2.png" alt="" class="leaf2-img">
+                        <img src="app-shape-1.png" alt="" class="leaf1-img">
+                        <img src="app-shape-2.png" alt="" class="leaf2-img">
                     </div>
 
 
